# kari

./: .gitignore  README.md  pyproject.toml  requirements.txt
kari/flows/: factory.py  flow.py
kari/flows/steps/: append_all_outputs.py  command.py  llm_ollama.py  output.py
tests/files/: generic_flow.yml  ollama_flow.yml  ollama_test.yml  venezuela-capital.prompt
tests/functional/: flows.py  ollama_flow.py  remote_ollama.py
tests/functional/files/: generic_flow.yml
tests/unit/: test_dummy.py  test_that_we_can_create_flows.py
